<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/registro"
        android:layout_width="match_parent"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintBottom_toTopOf="@id/editTextNumbers"
         />

    <EditText
        android:id="@+id/editTextNumbers"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:digits="1234567890"
        android:inputType="numberDecimal"
        android:textSize="50dp"
        app:layout_constraintTop_toBottomOf="@id/appName"
        tools:layout_editor_absoluteX="16dp"></EditText>

    <Button
        android:id="@+id/numeroTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/numeroTres"
        app:layout_constraintLeft_toRightOf="@id/numeroDos"
        app:layout_constraintTop_toBottomOf="@id/editTextNumbers"></Button>

    <Button
        android:id="@+id/numeroDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/numeroDos"
        app:layout_constraintLeft_toRightOf="@id/numeroUno"
        app:layout_constraintTop_toBottomOf="@id/editTextNumbers"></Button>

    <Button
        android:id="@+id/numeroCuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/numeroCuatro"
        app:layout_constraintLeft_toRightOf="@id/numeroTres"
        app:layout_constraintTop_toBottomOf="@id/editTextNumbers"></Button>

    <Button
        android:id="@+id/numeroUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/numeroUno"
        app:layout_constraintTop_toBottomOf="@id/editTextNumbers"
        tools:layout_editor_absoluteX="23dp"></Button>

    <Button
        android:id="@+id/numeroSeis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroSeis"
        app:layout_constraintLeft_toRightOf="@id/numeroCinco"
        app:layout_constraintTop_toBottomOf="@id/numeroDos"></Button>

    <Button
        android:id="@+id/multiplicacion"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplicacion"
        app:layout_constraintLeft_toRightOf="@id/division"
        app:layout_constraintTop_toBottomOf="@id/resta"></Button>

    <Button
        android:id="@+id/limpiar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/limpiar"
        app:layout_constraintTop_toBottomOf="@id/division"
        tools:layout_editor_absoluteX="23dp"></Button>

    <Button
        android:id="@+id/numeroSiete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroSiete"
        app:layout_constraintLeft_toRightOf="@id/numeroSeis"
        app:layout_constraintTop_toBottomOf="@id/numeroTres"></Button>

    <Button
        android:id="@+id/numeroCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroCinco"
        app:layout_constraintTop_toBottomOf="@id/numeroUno"
        tools:layout_editor_absoluteX="23dp"></Button>

    <Button
        android:id="@+id/numeroNueve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroNueve"
        app:layout_constraintTop_toBottomOf="@id/numeroCinco"
        tools:layout_editor_absoluteX="23dp"></Button>

    <Button
        android:id="@+id/numeroCero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroCero"
        app:layout_constraintLeft_toRightOf="@id/numeroNueve"
        app:layout_constraintTop_toBottomOf="@id/numeroSeis"></Button>

    <Button
        android:id="@+id/suma"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suma"
        app:layout_constraintLeft_toRightOf="@id/numeroCero"
        app:layout_constraintTop_toBottomOf="@id/numeroSiete"></Button>

    <Button
        android:id="@+id/igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/igual"
        app:layout_constraintLeft_toRightOf="@id/multiplicacion"
        app:layout_constraintTop_toBottomOf="@id/suma"></Button>

    <Button
        android:id="@+id/resto"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resto"
        app:layout_constraintLeft_toRightOf="@id/igual"
        app:layout_constraintTop_toBottomOf="@id/resta"></Button>

    <Button
        android:id="@+id/division"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        app:layout_constraintTop_toBottomOf="@id/numeroNueve"
        tools:layout_editor_absoluteX="23dp"></Button>

    <Button
        android:id="@+id/resta"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resta"
        app:layout_constraintLeft_toRightOf="@id/suma"
        app:layout_constraintTop_toBottomOf="@id/numeroOcho"></Button>

    <Button
        android:id="@+id/numeroOcho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroOcho"
        app:layout_constraintLeft_toRightOf="@id/numeroSiete"
        app:layout_constraintTop_toBottomOf="@id/numeroCuatro"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>